fix(sidebar): network history sidebar overflows correctly
separated the `network-history-list` from `history-list`

Gave padding to the `network-history-list`, to not conflict with the `clone dataset` button

--- a/app/scss/0.4.0/dataset.scss
+++ b/app/scss/0.4.0/dataset.scss
@@ -181,3 +181,10 @@
     height: 500px;
   }
 }
+
+#history-list {
+  padding: 10px;
+  flex-grow: 1;
+  height: 100%;
+  overflow: auto;
+}
